- Configurable default DCI retention time and polling interval
- New NXSL functions: CreateNode, GetSumDCIValue
- New NXSL operator @ - safe get object's attribute
- New MIBs added: ASTARO-MIB, CPQHOST-MIB, CPQPOWER-MIB
- Special support for wireless switches
- Driver for Motorola/Symbol wireless switches
- Fixed export bugs in database manager
- Management console:
	- "Export to CSV" option added to most tabular data views
	- Auto login option for web console
- Fixed issues: #86, #199, #242, #249, #250, #251


*
* 1.2.6
*

- DCI instance discovery
- nxshell: Python-based client-side scripting
- Array initializers in NXSL
- NXSL function PostEvent can use event names instead of event codes
- New NXSL functions: AgentReadParameter, CreateDCI, ManageObject, 
  SetInterfaceExpectedState, UnmanageObject
- Management console:
	- Network map functionality in web console now in sync with desktop version
	- Alarm details view improved
	- Configurable chart ordering on performance tab
	- Syslog parser editor working correctly
- Android Console:
	- Force reconnection after changing settings (#241)
	- Fixed bug in showing predefined graphs and dashboards (#239)
	- Added support for mobile device objects
	- Added geolocation info in overview tab
- 64bit interface counters in Windows agent
- Improved LLDP support
- Driver for D-Link switches
- Event parameters passed as arguments to action scripts
- PING subagent: targets can be specified using DNS names
- Android Agent:
	- Changed name of configuration parameters (NB needs reconfiguration of agent!!!)
	- New location strategy: relay on updates from other apps or force update (frequency, duration and provider selectable).
	- Show location strategy on home screen.
	- Fixed bug in automatic connection on first start when agent was disabled
	- Override for connection schedule on detecting change of connectivity (selectable)
- New MIBs added: LLDP-EXT-DOT1-MIB, LLDP-EXT-DOT3-MIB